--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ node_modules
 # .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-# build/Release
+build/Release
 
 # Dependency directories
 # node_modules
@@ -53,7 +53,7 @@ node_modules
 
 # Build Files
 # public/
-# .cache/
+.cache/
 
 # Gatsby context
 # .gatsby-context.js
