--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ node_modules
 # lib-cov
 
 # Coverage directory used by tools like istanbul
-# coverage
+coverage
 
 # nyc test coverage
 # .nyc_output
