--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "1.1.0",
   "author": "Rener Baffa da Silva <renerbaffa@gmail.com>",
   "dependencies": {
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "gatsby": "2.0.0",
     "gatsby-image": "2.0.0",
     "gatsby-plugin-catch-links": "2.0.2",
@@ -29,14 +31,19 @@
     "moment": "^2.22.2",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
     "react-disqus-comments": "^1.1.1",
+    "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-share": "^2.0.0",
     "react-twitter-widgets": "^1.7.1",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "cli-glob": "^0.1.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
@@ -46,6 +53,8 @@
     "eslint-plugin-prettier": "^2.7.0",
     "eslint-plugin-react": "^7.6.1",
     "gh-pages": "^1.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^23.6.0",
     "prettier": "^1.10.2",
     "remark-cli": "^5.0.0",
     "remark-preset-lint-recommended": "^3.0.1",
@@ -70,7 +79,8 @@
     "lint:js": "eslint --ext .js,.jsx .",
     "lint:md": "remark content/posts/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
-    "format:js": "prettier '**/*.{js,jsx}' --write"
+    "format:js": "prettier '**/*.{js,jsx}' --write",
+    "test": "jest"
   },
   "remarkConfig": {
     "plugins": [
