--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,10 @@ node_js:
   - "9"
 git:
   depth: 3
+install:
+  - npm install -g codecov
 script:
+  - npm run test && codecov
   - npm run build
 deploy:
   provider: pages
