--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
+    "codecov": "^3.1.0",
     "gatsby": "2.0.0",
     "gatsby-image": "2.0.0",
     "gatsby-plugin-catch-links": "2.0.2",
@@ -80,7 +81,8 @@
     "lint:md": "remark content/posts/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write",
-    "test": "jest"
+    "jest": "jest",
+    "test": "jest --no-cache --coverage"
   },
   "remarkConfig": {
     "plugins": [
